ci: switch to github actions

--- a/package.json
+++ b/package.json
@@ -7,16 +7,16 @@
     "Kent C. Dodds <kent@doddsfamily.us>"
   ],
   "scripts": {
-    "postinstall": "ngcc --properties main",
+    "postinstall": "ngcc --properties es2015 module main --first-only && ngcc --properties main",
     "contrib:generate": "githubcontrib --owner ngx-formly --repo ngx-formly --cols 6 --sortOrder desc > CONTRIBUTORS.md",
     "lint": "tslint -p tsconfig.json",
     "lint:fix": "tslint --fix -p tsconfig.json",
     "format": "prettier --list-different \"**/*.{ts,json,css,scss,html}\"",
     "format:fix": "prettier --write \"**/*.{ts,json,css,scss,html}\"",
-    "commit": "npm run build && git-cz",
-    "bundlesize": "npm run build && bundlesize",
+    "bundlesize": "bundlesize",
     "build": "ts-node --dir build build.ts",
-    "release": "standard-version --prerelease alpha && npm run build && node build/publish.js",
+    "release": "standard-version --prerelease alpha",
+    "publish": "ts-node --dir build publish.ts",
     "start": "ng serve --port 4100 --open",
     "demo": "npm run start",
     "test": "jest",
